# otel-azuregigwarm-exporter

./: .gitignore  README.md  go.mod
docs/: AKS_DEPLOYMENT.md  MODULE_STRUCTURE.md  QUICK_START.md  TESTING.md
examples/: Makefile  README.md  build.sh  builder-config.yaml  config.yaml.example  send-test-logs.sh  send-test-traces.sh  test-logs.json  test-traces.json
exporter/azuregigwarmexporter/: README.md  config.go  factory.go  factory_nocgo.go  go.mod  logsexporter.go  metadata.yaml  telemetry.go  tracesexporter.go
exporter/azuregigwarmexporter/geneva_ffi_bridge/: Cargo.toml  README.md  build.rs
exporter/azuregigwarmexporter/geneva_ffi_bridge/src/: lib.rs
exporter/azuregigwarmexporter/internal/cgo/: c_helpers.c  geneva_ffi.go
exporter/azuregigwarmexporter/testbed/: .env.template  .gitignore  CONFIG_EXPLANATION.md  Makefile  QUICK_START_REAL_BACKEND.md  README-FILESTORAGE.md  README.md  REAL_BACKEND_TESTING.md  config-real-backend-persistent.yaml.template  config-real-backend.yaml.template  go.mod  run-real-backend-test.sh  setup.sh  test-file-storage.sh
exporter/azuregigwarmexporter/testbed/datareceivers/: azuregigwarm.go
exporter/azuregigwarmexporter/testbed/storage/: exporter_azuregigwarm__logs  exporter_azuregigwarm__traces
exporter/azuregigwarmexporter/testbed/tests/: gigwarm_test.go
